--- a/Practice/BootstrapTask/Style/index.css
+++ b/Practice/BootstrapTask/Style/index.css
@@ -1,26 +1,36 @@
-.logo{
-    font-weight: 900;
-    font-size: x-large;
-    
-}
-.navigation-bar{
-    border: 1px solid black;
-}
-.full-screen-bg {
-    background-image: url('../Images/roller4.jpeg'); 
-    background-size: cover;      
-    background-position: center;  
-    background-repeat: no-repeat; 
-    height: 80vh;                
-    width: 100vw;                 
+body {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
-.tick{
+
+
+.logo {
+    font-weight: 900;
+    font-size: x-large;
+
+}
+
+.navigation-bar {
+    border: 1px solid black;
+}
+
+.full-screen-bg {
+    background-image: url('../Images/roller4.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 80vh;
+    width: 100vw;
+}
+
+.tick {
     color: green;
     font-weight: 900;
 }
 
-.subtitle{
+.subtitle-class {
     color: #007bff;
     font-weight: 900;
 }
@@ -30,16 +40,27 @@
     justify-content: center;
     align-items: center;
     color: white;
-    width: 30%;
+    width: 100%;
+    height:80%
 }
 
-.side-list{
+.about-size-title{
+    font-size: xx-large;
+}
+
+.side-content{
+    padding-left: 25px !important;
+}
+
+.side-list {
     list-style-type: none;
-    padding: 0;        
-    margin: 0; cursor: pointer;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    line-height: 30px;
 }
 
-.get-in-touch{
+.get-in-touch {
     border-radius: 20px;
     color: white;
     background-color: #007bff;
@@ -47,10 +68,51 @@
     text-align: center;
 }
 
-.silver-color{
+.silver-color {
     color: #A8A9AD;
 }
 
-.contact-us{
-    background-color: #e5e5e5;
+.contact-us {
+    background-color: #f8f9fa;
+    padding:100px;
 }
+
+.contact-form{
+    background-color: white;
+}
+
+.footer {
+    background-color: #333333;
+    color: white;
+}
+.Manager-name{
+    font-size:x-large;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+.designation{
+    color: #A8A9AD;
+    padding-top: 0;
+}
+
+.theme-color{
+    color: #007bff;
+}
+
+.custom-input{
+    border-radius: 30px !important;
+    padding-left: 20px !important;
+    margin-top: 10px;
+}
+
+.contact-us-text{
+    font-size: 20px;
+}
+
+.montserrat-title-font {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+    font-size:xx-large;
+  }
